<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FragmentForum">

        <Button
            android:id="@+id/btn_aduan"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="Dari Aduan"
            android:background="@drawable/border_button"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012" />


        <Button
            android:id="@+id/btn_kades"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="Dari Kades"
            android:textSize="17dp"
            android:textColor="@color/green"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.908"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:id="@+id/tv_dari_aduan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_medium"
            android:text="Dari : Aduan Warga"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_aduan"
            app:layout_constraintVertical_bias="0.035" />

        <ImageView
            android:id="@+id/ivOption"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:src="@drawable/options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107" />

        <TextView
            android:id="@+id/tv_dua_hari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 Hari yang Lalu"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:fontFamily="@font/nunitosans_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dari_aduan"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nunitosans_medium"
            android:text="@string/laporan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dua_hari"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/tvPerihal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nunitosans_medium"
            android:text="@string/perihal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.261" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_medium"
            android:text="Lihat Selengkapnya"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.276" />

        <ImageView
            android:id="@+id/ivLampu"
            android:layout_width="370dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/lampu_jalan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPerihal1" />

        <ImageView
            android:id="@+id/ivLike1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLampu"
            app:layout_constraintVertical_bias="0.042" />

        <ImageView
            android:id="@+id/ivDislike1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/dislike"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLampu"
            app:layout_constraintVertical_bias="0.042" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLampu"
            app:layout_constraintVertical_bias="0.042" />

        <View
            android:id="@+id/vForum"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLike1"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/tv_aduan_warga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_medium"
            android:text="Dari : Aduan Warga"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vForum"
            app:layout_constraintVertical_bias="0.061" />

        <ImageView
            android:id="@+id/ivOption2"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:src="@drawable/options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vForum"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_medium"
            android:text="14 Menit yang Lalu"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_aduan_warga"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/tv_terima_laporan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nunitosans_medium"
            android:text="@string/laporan2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:layout_constraintVertical_bias="0.013" />

        <TextView
            android:id="@+id/tvPerihal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/perihal2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_terima_laporan"
            app:layout_constraintVertical_bias="0.101" />

        <TextView
            android:id="@+id/tv_lihat_selengkapnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lihat Selengkapnya"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.688"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.779" />

        <include
            layout="@layout/forum2_layout"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPerihal2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>